Cherry-pick: merge release 0.10 branch to main (#91)
* fix(Makefile): Improve sed regex patterns for whitespace handling (#82)

- Update sed pattern to handle both spaces and tabs in .gitmodules parsing
- Replace `\s*` with `[ \t]*` for better compatibility with sed
- Fix path extraction regex to properly strip leading characters and whitespace

Signed-off-by: affonsov <67347924+affonsov@users.noreply.github.com>

* FIX: Add cbindgen availability check before build (#83)

- Add early validation to check if cbindgen is available in PATH
- Provide clear error message with installation instructions when cbindgen is missing
- Separate cbindgen availability check from directory existence check for better error handling
- Prevent build failures by catching missing dependencies before attempting compilation

Signed-off-by: affonsov <67347924+affonsov@users.noreply.github.com>

* Update ValkeyGlidePHP version to 0.10.0 (#84)

- Update VALKEY_GLIDE_PHP_VERSION in common.h from "0.1" to "0.10.0"
- Update PHP_VALKEY_GLIDE_VERSION in php_valkey_glide.h from "1.0.0" to "0.10.0"
- Align version numbers across header files for consistency

Signed-off-by: affonsov <67347924+affonsov@users.noreply.github.com>

* Update ValkeyGlidePHP package.xml version to 0.10.0 (#86)

* Update ValkeyGlidePHP package.xml version to 0.10.0

- Update release version from 0.9.0 to 0.10.0
- Update API version from 0.9.0 to 0.10.0
- Update release date to 2025-11-27
- Add new features to release notes: OpenTelemetry support, logging capabilities, IAM authentication, refresh topology configuration, and multi-database support for cluster mode
- Add changelog entry for version 0.10.0 with complete feature list
- Reflect latest improvements and features added in recent releases

Signed-off-by: affonsov <67347924+affonsov@users.noreply.github.com>

* update changelog.md with the 0.10.0 version

Signed-off-by: affonsov <67347924+affonsov@users.noreply.github.com>

---------

Signed-off-by: affonsov <67347924+

--- a/package.xml
+++ b/package.xml
@@ -12,11 +12,11 @@ Note: After installation, add "extension=valkey_glide" to your php.ini file.</de
   <email>noreply@valkey.io</email>
   <active>yes</active>
  </lead>
- <date>2025-09-18</date>
+ <date>2025-11-27</date>
  <time>18:25:00</time>
  <version>
-  <release>0.9.0</release>
-  <api>0.9.0</api>
+  <release>0.10.0</release>
+  <api>0.10.0</api>
  </version>
  <stability>
   <release>beta</release>
@@ -24,15 +24,15 @@ Note: After installation, add "extension=valkey_glide" to your php.ini file.</de
  </stability>
  <license uri="https://www.apache.org/licenses/LICENSE-2.0">Apache-2.0</license>
  <notes>
-Initial PECL release of Valkey GLIDE PHP extension.
+Release 0.10.0 of Valkey GLIDE PHP extension.
 
-Features:
-- High-performance Rust-based core with PHP FFI bindings
-- Support for both standalone and cluster Redis/Valkey deployments
-- Comprehensive command support for strings, hashes, lists, sets, and sorted sets
-- Type-safe PHP API with proper error handling
-- Cross-platform compatibility (Linux, macOS, Windows)
-- Automatic connection pooling and management
+New Features:
+- OpenTelemetry support for observability
+- Logging capabilities
+- IAM authentication support for ElastiCache and MemoryDB
+- Refresh topology configuration
+- Multi-Database Support for Cluster Mode (Valkey 9.0+)
+- Password API updates
 
 Requirements:
 - PHP 8.1 or higher
@@ -116,6 +116,28 @@ Requirements:
   <configureoption default="no" name="enable-valkey-glide-debug" prompt="Enable debug support?" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2025-11-27</date>
+   <time>18:25:00</time>
+   <version>
+    <release>0.10.0</release>
+    <api>0.10.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <license uri="https://www.apache.org/licenses/LICENSE-2.0">Apache-2.0</license>
+   <notes>
+Release 0.10.0 with new features:
+- OpenTelemetry support for observability
+- Logging capabilities
+- IAM authentication support for ElastiCache and MemoryDB
+- Refresh topology configuration
+- Multi-Database Support for Cluster Mode (Valkey 9.0+)
+- Password API updates
+   </notes>
+  </release>
   <release>
    <date>2025-09-18</date>
    <time>18:25:00</time>
