--- a/.github/workflows/publish-pecl.yml
+++ b/.github/workflows/publish-pecl.yml
@@ -159,9 +159,25 @@ jobs:
           tar xzf "$PACKAGE_DIR.tgz"
           cd "$PACKAGE_DIR"
 
-          # Install PHP and build tools
+          # Install PHP and build tools (matching test-pecl.yml dependencies)
           sudo apt-get update
-          sudo apt-get install -y php-dev php-cli build-essential git
+          sudo apt-get install -y \
+            php-dev \
+            php-cli \
+            build-essential \
+            git \
+            protobuf-compiler \
+            protobuf-c-compiler \
+            libprotobuf-c-dev \
+            libprotobuf-c1 \
+            pkg-config \
+            libssl-dev
+
+          # Install cbindgen (required for build)
+          echo "=== Installing cbindgen ==="
+          cargo install cbindgen
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+          export PATH="$HOME/.cargo/bin:$PATH"
 
           # Test build process
           phpize
